--- a/src/assets/scss/custom/_variables.scss
+++ b/src/assets/scss/custom/_variables.scss
@@ -16,8 +16,8 @@ $az-border-base:                  #dee2ef;
 $ckbox-size:                      16px;
 $rdiobox-size:                    16px;
 
-$az-color-primary:                $indigo;
-$az-color-secondary:              $blue;
+$az-color-primary:                #f3b12e;
+$az-color-secondary:              #151515;
 $az-color-headline:               #031b4e;
 $az-color-text:                   #4e5f83;
 
