--- a/src/assets/scss/template/_signup.scss
+++ b/src/assets/scss/template/_signup.scss
@@ -132,15 +132,19 @@
 }
 
 .az-signup-footer {
+  
+  margin-top: 1.25rem;
+
   p {
     color: $gray-600;
     margin-bottom: 0;
+    text-align: center;
   }
 
   a {
-    color: $gray-900;
+    color: darken($az-color-primary, 20);
     font-weight: 700;
 
-    @include hover-focus() { color: $az-color-primary; }
+    @include hover-focus() { color: $az-color-primary; text-decoration: underline; }
   }
 }
