Polished redux store and added alerts

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -167,6 +167,7 @@
 @import "../assets/scss/lib/nouislider";
 @import "../assets/scss/lib/multistep";
 @import "../assets/scss/lib/slider-tab";
+@import "../assets/scss/lib/flashmessages";
 
 /* ############### PAGE LAYOUT STYLES ############### */
 @import "../assets/scss/layout/content";
