--- a/src/assets/scss/template/_signin.scss
+++ b/src/assets/scss/template/_signin.scss
@@ -3,6 +3,7 @@
 .az-signin-wrapper {
   flex: 1;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
@@ -14,7 +15,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: rgba(#fff, .5);
+  background-color: rgba(#fff, 0.5);
 
   @media (min-width: 480px) {
     border: 1px solid $gray-300;
@@ -36,7 +37,9 @@
     margin-bottom: 25px;
   }
 
-  label { color: $gray-600; }
+  label {
+    color: $gray-600;
+  }
 
   .form-control {
     color: $gray-900;
@@ -55,20 +58,28 @@
     }
   }
 
-  .btn { margin-top: 25px; }
+  .btn {
+    margin-top: 25px;
+  }
 }
 
 .az-signin-footer {
   p {
     color: $gray-600;
-    &:first-child { margin-bottom: 5px; }
-    &:last-child { margin-bottom: 0; }
+    &:first-child {
+      margin-bottom: 5px;
+    }
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 
   a {
     color: $gray-900;
     font-weight: 700;
 
-    @include hover-focus() { color: $az-color-primary; }
+    @include hover-focus() {
+      color: $az-color-primary;
+    }
   }
 }
